--- a/css/cr2.css
+++ b/css/cr2.css
@@ -3,27 +3,16 @@
     padding: 0;
     box-sizing: border-box;
 }
-.menubar{
-    display:flex;
-    flex-direction: row;
-    background-color: black;
-    justify-content:space-between;
-}
-.menubar1{
-    display:flex;
-    flex-direction: row;
-    background-color: black;
-    justify-content:space-between;
-    padding-top:10px;
-    padding-bottom:10px;
-    padding-left:10px;
-}
+
 .menupoint{
     display:flex;
     flex-direction: row;    
     padding:10px;
     color:white;
     
+}
+.menubar{
+    width: 100%;
 }
 .menutext{
     text-decoration: none;
@@ -85,7 +74,7 @@
     font-weight: bold;
 }
 #level_prior{
-    color:white;
+    color:black;
     padding:5px;
 }
 .priornum{
@@ -93,7 +82,6 @@
 }
 .infotext{
     text-align:left;
-    /* color:red; */
     text-decoration: none;
 }
 .card_sub{
@@ -107,4 +95,22 @@
     padding: 2px 10px;
     text-transform: uppercase;
     cursor: pointer;
+}
+.card_sub_icons{
+    background-color: white;
+    /* border: 1px solid #e5eaed;
+    border-radius: 50px; */
+    /* color: #fff; */
+    /* width:max-content; */
+    font-size: 12px;
+    font-weight: 600;
+    padding: 2px 10px;
+    text-transform: uppercase;
+    cursor: pointer;
+}
+
+.sp_menu{
+    /* background-color:#47bcd4; */
+    padding:11px;
+    color:white;
 }
