--- a/css/cr2.css
+++ b/css/cr2.css
@@ -93,6 +93,7 @@
     font-size: 12px;
     font-weight: 600;
     padding: 2px 10px;
+    margin-left:5px;
     text-transform: uppercase;
     cursor: pointer;
 }
